Fix collapsed spacing after ScreenLayout refactor

--- a/src/components/CountrySelector/style.scss
+++ b/src/components/CountrySelector/style.scss
@@ -6,6 +6,7 @@
 
 .container {
   flex: 1 1 auto;
+  padding-top: 16 * $unit;
 }
 
 %_text {
